fix: improve hamburger menu visibility in light mode
- Update menu button SVG to use theme variables for proper color switching
- Add color styling for menu text to ensure visibility
- Ensure proper contrast in both light and dark modes
- Override colors for banner pages (.alt) to maintain white visibility

--- a/_sass/layout/_header.scss
+++ b/_sass/layout/_header.scss
@@ -103,6 +103,7 @@
 
 			a {
 				border: 0;
+				color: _theme-var(fg);
 				display: block;
 				font-size: 0.8em;
 				height: inherit;
@@ -110,6 +111,10 @@
 				padding: 0 0.75em;
 				position: relative;
 				vertical-align: middle;
+				
+				&:hover {
+					color: _theme-var(highlight);
+				}
 
 				&:last-child {
 					padding-right: 1.5em;
@@ -119,7 +124,7 @@
 					padding-right: 3.325em !important;
 
 					&:before, &:after {
-						background-image: svg-url('<svg xmlns="http://www.w3.org/2000/svg" width="24" height="32" viewBox="0 0 24 32" preserveAspectRatio="none"><style>line { stroke-width: 2px; stroke: #{_palette(fg-bold)}; }</style><line x1="0" y1="11" x2="24" y2="11" /><line x1="0" y1="21" x2="24" y2="21" /><line x1="0" y1="16" x2="24" y2="16" /></svg>');
+						background-image: svg-url('<svg xmlns="http://www.w3.org/2000/svg" width="24" height="32" viewBox="0 0 24 32" preserveAspectRatio="none"><style>line { stroke-width: 2px; stroke: #{_theme-var(fg-bold)}; }</style><line x1="0" y1="11" x2="24" y2="11" /><line x1="0" y1="21" x2="24" y2="21" /><line x1="0" y1="16" x2="24" y2="16" /></svg>');
 						background-position: center;
 						background-repeat: no-repeat;
 						background-size: 24px 32px;
@@ -135,7 +140,7 @@
 
 					&:after {
 						@include vendor('transition', 'opacity #{_duration(transition)} ease-in-out');
-						background-image: svg-url('<svg xmlns="http://www.w3.org/2000/svg" width="24" height="32" viewBox="0 0 24 32" preserveAspectRatio="none"><style>line { stroke-width: 2px; stroke: #{_palette(highlight)}; }</style><line x1="0" y1="11" x2="24" y2="11" /><line x1="0" y1="21" x2="24" y2="21" /><line x1="0" y1="16" x2="24" y2="16" /></svg>');
+						background-image: svg-url('<svg xmlns="http://www.w3.org/2000/svg" width="24" height="32" viewBox="0 0 24 32" preserveAspectRatio="none"><style>line { stroke-width: 2px; stroke: #{_theme-var(highlight)}; }</style><line x1="0" y1="11" x2="24" y2="11" /><line x1="0" y1="21" x2="24" y2="21" /><line x1="0" y1="16" x2="24" y2="16" /></svg>');
 						opacity: 0;
 						z-index: 1;
 					}
@@ -174,6 +179,24 @@
 				
 				&:hover {
 					color: _theme-var(highlight);
+				}
+			}
+			
+			nav a {
+				color: #ffffff;
+				
+				&:hover {
+					color: _theme-var(highlight);
+				}
+				
+				&[href="#menu"] {
+					&:before, &:after {
+						background-image: svg-url('<svg xmlns="http://www.w3.org/2000/svg" width="24" height="32" viewBox="0 0 24 32" preserveAspectRatio="none"><style>line { stroke-width: 2px; stroke: #ffffff; }</style><line x1="0" y1="11" x2="24" y2="11" /><line x1="0" y1="21" x2="24" y2="21" /><line x1="0" y1="16" x2="24" y2="16" /></svg>');
+					}
+
+					&:after {
+						background-image: svg-url('<svg xmlns="http://www.w3.org/2000/svg" width="24" height="32" viewBox="0 0 24 32" preserveAspectRatio="none"><style>line { stroke-width: 2px; stroke: #{_theme-var(highlight)}; }</style><line x1="0" y1="11" x2="24" y2="11" /><line x1="0" y1="21" x2="24" y2="21" /><line x1="0" y1="16" x2="24" y2="16" /></svg>');
+					}
 				}
 			}
 
